--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "description": "",
   "dependencies": {
     "axios": "^1.11.0",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "googleapis": "^159.0.0",
     "querystring": "^0.2.1"
   },
   "devDependencies": {
